--- a/index.html
+++ b/index.html
@@ -391,7 +391,8 @@
       <h1 class="mb-0 mx-3" style="margin-top: 100px;">Populer products</h1>
     </div>
     <div class="products-list-container container d-flex flex-wrap mt-5">
-      <div class="product position-relative mx-2 px-3 py-3" style="width: 20%; height: max-content; border-radius: 8px;">
+    
+      <!-- <div class="product position-relative mx-2 px-3 py-3" style="width: 20%; height: max-content; border-radius: 8px;">
         <div class="pro-tags position-absolute" style="z-index: 999; top: 3%; height: max-content;">
           <div class="pt bg-danger text-white mb-2 mt-2">40%</div>
           <div class="pt bg-success text-white">Sale</div>
@@ -461,6 +462,9 @@
             </svg>
           </div>
           <div class="point">4.3 (4)</div>
+        </div>
+        <div class="stok-status">
+          <p>In Stock</p>
         </div>
         <div class="p-bottom-section d-flex align-items-center justify-content-between mt-3">
           <div class="price">$21.6 <span class="old-price">$25.5</span></div>
@@ -508,32 +512,32 @@
         </div>
         <div class="product-rating d-flex justify-content-between">
           <div class="stars">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="12" height="12" fill="currentColor"
-              class="bi bi-star-fill text-warning">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="12" height="12"
+              class="bi bi-star-fill">
               <path
                 d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z">
               </path>
             </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="12" height="12" fill="currentColor"
-              class="bi bi-star-fill text-warning">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="12" height="12"
+              class="bi bi-star-fill">
               <path
                 d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z">
               </path>
             </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="12" height="12" fill="currentColor"
-              class="bi bi-star-fill text-warning">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="12" height="12"
+              class="bi bi-star-fill">
               <path
                 d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z">
               </path>
             </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="12" height="12" fill="currentColor"
-              class="bi bi-star-fill text-warning">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="12" height="12"
+              class="bi bi-star-fill">
               <path
                 d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z">
               </path>
             </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="12" height="12" fill="currentColor"
-              class="bi bi-star-fill text-warning">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="12" height="12"
+              class="bi bi-star-fill">
               <path
                 d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z">
               </path>
@@ -541,13 +545,19 @@
           </div>
           <div class="point">4.3 (4)</div>
         </div>
+        <div class="stok-status">
+          <p>In Stock</p>
+        </div>
         <div class="p-bottom-section d-flex align-items-center justify-content-between mt-3">
           <div class="price">$21.6 <span class="old-price">$25.5</span></div>
           <div class="add-tocart-button">
             <button style="border-radius: 4px;" class="px-3 py-1 text-white">+Add</button>
           </div>
         </div>
-      </div>
+      </div> -->
+
+
+
     </div>
 
     <footer style="height: 100px; width: 100%;">
