--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </nav>
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid p-0">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="https://freshcart-next-js.vercel.app" target="_blank">
         <!-- svg -->
         <svg xmlns="http://www.w3.org/2000/svg" width="160" height="31" viewBox="0 0 160 31" fill="none">
           <path
