--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
             <line x1="3" y1="6" x2="21" y2="6"></line>
             <path d="M16 10a4 4 0 0 1-8 0"></path>
           </svg>
-          <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill text-bg-success">
-            5
+          <span class="cart_items_length position-absolute top-0 start-100 translate-middle badge rounded-pill text-bg-success">
+            0
             <!-- <span class="visually-hidden">unread messages</span> -->
           </span>
         </div>
@@ -401,7 +401,7 @@
   <!-- cart ofcanvas  -->
 
   <!-- notify vew cart  -->
-  <div class="vew-cart-notification position-fixed" style="z-index: 9999; bottom: 20px; right: 20px; width: max-content; max-width: 70%; height: max-content;">
+  <div class="vew-cart-notification position-fixed" style="z-index: 9999; bottom: 20px; right: 20px;">
      <!-- <div class="view-cart-noti-card">
        <div class="mb-0 d-flex justify-content-center align-items-center"> 
         <div class="checkMark_v_c_notis d-flex justify-content-center align-items-center">
